# api/src/router/router.go
@@ -4,7 +4,7 @@ import (
     "github.com/labstack/echo/v4"
     "api/internal/handlers/index"
     "api/internal/handlers/user"
-
+    "api/internal/handlers/post"
     "api/internal/middleware/auth"
 )
 
@@ -21,4 +21,9 @@ func SetupRouter(e *echo.Echo) {
     v1.GET("/users", userHandler.GetUsers)
     v1.PUT("/user/:uid", userHandler.UpdateUser)
     v1.DELETE("/user/:uid", userHandler.DeleteUser)
+
+    postHandler := post.NewPostHandler(e)
+    v1.POST("/post", postHandler.CreatePost)
+    v1.GET("/post/:id", postHandler.GetPost)
+    v1.DELETE("/post/:id", postHandler.DeletePost)
 }
